add: new routes and update docs
